Disabling VisualElementsManifest, not ready

--- a/Source/SizeOnDisk/SizeOnDisk.csproj
+++ b/Source/SizeOnDisk/SizeOnDisk.csproj
@@ -412,9 +412,7 @@
     <Resource Include="Icons\Select.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="SizeOnDisk.VisualElementsManifest.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="SizeOnDisk.VisualElementsManifest.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Medias\Folder.svg" />
