New tool: File property list with metadata

--- a/SizeOnDisk/SizeOnDisk.csproj
+++ b/SizeOnDisk/SizeOnDisk.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Shell\ShellHelper_SafeNativeObjects.cs" />
     <Compile Include="ViewModel\FileAttributesEx.cs" />
     <Compile Include="ViewModel\FileNameValidationRule.cs" />
+    <Compile Include="ViewModel\VMFileProperty.cs" />
     <Compile Include="Windows\AboutBox.xaml.cs">
       <DependentUpon>AboutBox.xaml</DependentUpon>
     </Compile>
@@ -350,6 +351,10 @@
     <Resource Include="Icons\PrintHS.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\WinProps\WinProps.csproj">
+      <Project>{a9ed9069-f924-4c67-a203-331a41039d04}</Project>
+      <Name>WinProps</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\WPFByYourCommand\WPFByYourCommand\WPFByYourCommand.csproj">
       <Project>{89CC2D45-35B2-4C73-8C4C-AD12BB67CF7A}</Project>
       <Name>WPFByYourCommand</Name>
@@ -425,6 +430,12 @@
     <None Include="Medias\harddisk-drive-cyan.svg" />
     <None Include="Medias\Oxygen480-devices-drive-harddisk.svg" />
     <None Include="Medias\tango-drive-hard-disk.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\PropertiesList.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
