--- a/SizeOnDisk/packages.config
+++ b/SizeOnDisk/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.3" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.3" targetFramework="net452" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net452" />
-  <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net452" />
-  <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net452" />
+  <package id="gong-wpf-dragdrop" version="2.0.6" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.4" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.4" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.4" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.4" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.4" targetFramework="net46" developmentDependency="true" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" />
 </packages>
