--- a/SizeOnDisk/app.config
+++ b/SizeOnDisk/app.config
@@ -1,24 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="SizeOnDisk"
-             type="SizeOnDisk.Configurations.MainConfigurationSection, SizeOnDisk"/>
+    <section name="SizeOnDisk" type="SizeOnDisk.Configurations.MainConfigurationSection, SizeOnDisk" />
   </configSections>
   <SizeOnDisk>
     <editors>
-      <editor display="loc:OpenAsText"
-              definition="ApplicationKey"
-              parameter1="Notepad++.exe"/>
-      <editor display="loc:OpenAsText"
-              definition="ApplicationKey"
-              parameter1="TextPad.exe"/>
-      <editor display="loc:OpenAsText"
-              definition="ApplicationKey"
-              parameter1="notepad.exe"/>
+      <editor display="loc:OpenAsText" definition="ApplicationKey" parameter1="Notepad++.exe" />
+      <editor display="loc:OpenAsText" definition="ApplicationKey" parameter1="TextPad.exe" />
+      <editor display="loc:OpenAsText" definition="ApplicationKey" parameter1="notepad.exe" />
     </editors>
   </SizeOnDisk>
   <startup>
-    <supportedRuntime version="v4.0"
-                      sku=".NETFramework,Version=v4.6"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
